@@ -218,6 +218,13 @@ typedef struct _PTPIPHeader PTPIPHeader;
 #define PTP_OC_CANON_GetChanges		0x9020
 #define PTP_OC_CANON_GetFolderEntries	0x9021
 
+#define PTP_OC_CANON_RequestDirectTransfer 0x9028
+/* 902c: no parms, read 3 uint32 in data, no response parms */
+#define PTP_OC_CANON_902C		0x902c
+/* 902d: no parms, read 0x1d4 bytes data, 1 response parm */
+/* directory ? */
+#define PTP_OC_CANON_902D		0x902d
+
 /* Nikon extension Operation Codes */
 #define PTP_OC_NIKON_GetProfileAllData	0x9006
 #define PTP_OC_NIKON_SendProfileData	0x9007
@@ -1213,6 +1220,7 @@ uint16_t ptp_ek_sendfileobject	(PTPParams* params, unsigned char* object,
 
 /* Canon PTP extensions */
 uint16_t ptp_canon_9012 (PTPParams* params);
+uint16_t ptp_canon_request_direct_transfer (PTPParams* params, uint32_t* out);
 uint16_t ptp_canon_getobjectsize (PTPParams* params, uint32_t handle,
 				uint32_t p2, uint32_t* size, uint32_t* rp2);
 
